--- a/pure-async.cabal
+++ b/pure-async.cabal
@@ -18,7 +18,6 @@ source-repository head
 library
   exposed-modules:     Pure.Async
   build-depends:       base,
-                       pure-core,
-                       pure-default
+                       pure-elm
   hs-source-dirs:      src
   default-language:    Haskell2010
